tests/ui/static/gc/tracing/packed-structs.stderr
error: contains a non-word aligned field `usize`
  --> $DIR/packed-structs.rs:7:1
   |
LL | / struct PackedUsize {
LL | |     x: u16,
LL | |     y: usize,
LL | | }
   | |_^
   |
note: the lint level is defined here
  --> $DIR/packed-structs.rs:1:9
   |
LL | #![deny(misaligned_gc_pointers)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: contains a non-word aligned field `i64`
  --> $DIR/packed-structs.rs:21:1
   |
LL | / struct PackedI64 {
LL | |     x: u16,
LL | |     y: i64,
LL | | }
   | |_^

error: contains a non-word aligned field `u64`
  --> $DIR/packed-structs.rs:27:1
   |
LL | / struct PackedU64 {
LL | |     x: u16,
LL | |     y: u64,
LL | | }
   | |_^

error: contains a non-word aligned field `&'a usize`
  --> $DIR/packed-structs.rs:33:1
   |
LL | / struct PackedRef<'a> {
LL | |     x: u16,
LL | |     y: &'a usize,
LL | | }
   | |_^

error: contains a non-word aligned field `*mut usize`
  --> $DIR/packed-structs.rs:47:1
   |
LL | / struct PackedRaw {
LL | |     x: u16,
LL | |     y: *mut usize,
LL | | }
   | |_^

error: contains a non-word aligned field `usize`
  --> $DIR/packed-structs.rs:61:1
   |
LL | / struct PackedTuple {
LL | |     x: u16,
LL | |     y: (usize, u8),
LL | | }
   | |_^

error: contains a non-word aligned field `usize`
  --> $DIR/packed-structs.rs:67:1
   |
LL | / struct PackedArray {
LL | |     x: u16,
LL | |     y: [usize; 3],
LL | | }
   | |_^

error: contains a non-word aligned field `u64`
  --> $DIR/packed-structs.rs:73:1
   |
LL | / struct PackedArrayOffset {
LL | |     x: usize,
LL | |     y: [u16; 3],
LL | |     z: u64
LL | | }
   | |_^

error: contains a non-word aligned field `*mut u8`
  --> $DIR/packed-structs.rs:80:1
   |
LL | / struct PackedAdt {
LL | |     x: u16,
LL | |     y: RawPtr,
LL | | }
   | |_^

error: aborting due to 9 previous errors

